# Conversational_AI

./: README.md  pyproject.toml  trail.ipynb
Source/Data/: cleaned_data.json
Source/Data/raw_data/evaluation_data/: ground_truth.jsonl
Source/config/: config.yaml
Source/exception/: custom_exception.py
Source/notebooks/: trail.ipynb
Source/pipelines/: data_chunking.py  data_embedding.py  data_ingestion.py  text_splitter.py
Source/utils/: folder_operation.py
Source/web_crawling/: crawl.py  sitemap.txt
scraped_markdown/: www_honda2wheelersindia_com_services.md  www_honda2wheelersindia_com_services_maintenance_annual-maintenance-contract.md  www_honda2wheelersindia_com_services_maintenance_ev-care.md  www_honda2wheelersindia_com_services_maintenance_extended-warranty-plus.md  www_honda2wheelersindia_com_services_maintenance_extended-warranty.md  www_honda2wheelersindia_com_services_maintenance_recall-campaign.md  www_honda2wheelersindia_com_services_maintenance_recall-campaign_product-recall-listing.md  www_honda2wheelersindia_com_services_maintenance_road-side-assistance.md
